# ivory

./: .gitignore  .gitmodules  CMakeLists.txt
assets/images/players/: nate.json  nate1.json
assets/maps/: aya.tmx  large.tmx  map (1).tmx  map (1).xml  map.tmx  map.xml  map2.tmx  small.tmx
assets/shaders/: black.glsl  frag.glsl  vert.glsl
assets/tilesets/: overworld tiles.tsx  overworld.tsx  overworld_tiles.tsx
src/: CMakeLists.txt  main.cpp  noise.cpp
src/content/: CMakeLists.txt
src/content/include/content/: asset-loader.h  assets.h  camera.h  client.h  flag.h  game.h  map-loader.h  map.h  net-player.h  options.h  player-base.h  player.h  resources.h
src/content/src/: asset-loader.cpp  assets.cpp  camera.cpp  capture.cpp  client.cpp  flag.cpp  font.cpp  game.cpp  map-loader.cpp  map.cpp  net-player.cpp  options.cpp  player-base.cpp  player.cpp  resources.cpp
src/engine/: CMakeLists.txt
src/engine/include/engine/: engine.h  handle.h  parts.h  shapes.h  vertex.h
src/engine/src/: engine.cpp  handle.cpp  parts.cpp  shapes.cpp  vertex.cpp
src/ores/: CMakeLists.txt
src/ores/include/ores/: asset-loader.h  assets.h  background.h  camera.h  capture.h  client.h  flag.h  font.h  game.h  map-loader.h  map.h  net-player.h  options.h  player.h  resources.h  world.h
src/ores/src/: asset-loader.cpp  assets.cpp  background.cpp  camera.cpp  capture.cpp  client.cpp  flag.cpp  font.cpp  game.cpp  map-loader.cpp  map.cpp  net-player.cpp  options.cpp  player.cpp  resources.cpp  world.cpp
src/server/: CMakeLists.txt
src/server/include/server/: options.h  server.h
src/server/src/: main.cpp  options.cpp  server.cpp
src/shared/: CMakeLists.txt
src/shared/include/shared/: blocks.h  buffer.h  messages.h
src/shared/src/: blocks.cpp  buffer.cpp  messages.cpp
